--- a/packages/package-b/package.json
+++ b/packages/package-b/package.json
@@ -11,6 +11,9 @@
   "scripts": {
     "build": "tsc --build --verbose tsconfig.json"
   },
+  "dependencies": {
+    "@myscope/a": "^1.0.0"
+  },
   "devDependencies": {
     "typescript": "5.1.6",
     "vite": "^5.2.9"
