Implement workspace plugin

--- a/packages/package-b/tsconfig.json
+++ b/packages/package-b/tsconfig.json
@@ -3,8 +3,13 @@
     "compilerOptions": {
         "rootDir": "./src",
         "outDir": "./dist",
+        "baseUrl": ".",
+        "paths": {
+            "@/*": ["src/*"]
+        }
     },
     "include": ["src", "src/**/*.json"],
-
-    "references": []
+    "references": [
+        { "path": "../package-a" }
+    ]
 }
