--- a/packages/vite-plugin-npm-workspaces/tsconfig.json
+++ b/packages/vite-plugin-npm-workspaces/tsconfig.json
@@ -6,9 +6,12 @@
         "baseUrl": ".",
         "paths": {
             "@/*": ["src/*"]
-        }
+        },
+        "esModuleInterop": true,
     },
     "include": ["src", "src/**/*.json"],
 
-    "references": []
+    "references": [
+        { "path": "../package-b" }
+    ]
 }
